# llmapp-d3workshop3

./: .env.example  .gitignore  DOCKERIZE_PLAN.md  pyproject.toml
.github/workflows/: deepeval-tests.yml  llm-frontend-python.yml  llm-multiroute.yml  promptfoo-tests.yml
llm-frontend-python/: .dockerignore  Dockerfile
llm-multiroute/: .dockerignore  Dockerfile
llm-multiroute/app/: config.py
llm-python/: .dockerignore  Dockerfile
promptfoo-tests/: intent.yaml
