[project]
name = "day3"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.9"
dependencies = [
    "deepeval>=2.0.0",
    "fastapi==0.115.0",
    "flask==3.1.0",
    "httpx==0.27.2",
    "load-dotenv>=0.1.0",
    "pydantic==2.9.2",
    "pytest>=7.4.0",
    "pytest-asyncio==0.24.0",
    "python-dotenv==1.0.1",
    "requests>=2.31.0",
    "uvicorn==0.30.6",
]
